zipkin-starter-minimal-0.1.9-openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/path: /prometheus
      prometheus.io/port: "9411"
      fabric8.io/app-menu: management
      fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
      fabric8.io/git-branch: release-v0.1.9
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
      fabric8.io/scm-tag: 0.1.9
      fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin/
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/zipkin/target/zipkin-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin
      version: 0.1.9
      group: io.fabric8.zipkin
      expose: "true"
    name: zipkin
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 9411
    selector:
      project: zipkin
      provider: fabric8
      group: io.fabric8.zipkin
    type: LoadBalancer
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
      fabric8.io/git-branch: release-v0.1.9
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
      fabric8.io/scm-tag: 0.1.9
      fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin-mysql/
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/mysql/target/zipkin-mysql-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin-mysql
      version: 0.1.9
      group: io.fabric8.zipkin
    name: zipkin-mysql
  spec:
    ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      project: zipkin-mysql
      provider: fabric8
      group: io.fabric8.zipkin
    type: LoadBalancer
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      volume.beta.kubernetes.io/storage-class: standard
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/mysql/target/zipkin-mysql-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin-mysql
      version: 0.1.9
      group: io.fabric8.zipkin
    name: mysql-data
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 100Mi
    volumeName: mysql-data
- apiVersion: v1
  kind: ConfigMap
  metadata:
    annotations:
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/mysql/target/zipkin-mysql-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin-mysql
      version: 0.1.9
      group: io.fabric8.zipkin
    name: zipkin-mysql-cnf
  data:
    custom.cnf: |
      [mysqld]
      sql-mode=""
- apiVersion: v1
  kind: ConfigMap
  metadata:
    annotations:
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/mysql/target/zipkin-mysql-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin-mysql
      version: 0.1.9
      group: io.fabric8.zipkin
    name: zipkin-mysql-initdb
  data:
    init.sql: |
      [...]
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=zipkin&var-version=0.1.9
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
      fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin/
      fabric8.io/git-branch: release-v0.1.9
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
      fabric8.io/scm-tag: 0.1.9
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/zipkin/target/zipkin-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin
      version: 0.1.9
      group: io.fabric8.zipkin
    name: zipkin
  spec:
    replicas: 1
    selector:
      provider: fabric8
      project: zipkin
      group: io.fabric8.zipkin
      version: 0.1.9
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=zipkin&var-version=0.1.9
          fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
          fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin/
          fabric8.io/git-branch: release-v0.1.9
          fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin
          fabric8.io/scm-tag: 0.1.9
        labels:
          provider: fabric8
          project: zipkin
          version: 0.1.9
          group: io.fabric8.zipkin
      spec:
        containers:
        - env:
          - name: STORAGE_PORT_9042_TCP_ADDR
            value: zipkin-cassandra:9411
          - name: STORAGE_PORT_3306_TCP_ADDR
            value: zipkin-mysql:3306
          - name: STORAGE_TYPE
            value: mysql
          - name: TRANSPORT_TYPE
            value: http
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: openzipkin/zipkin:1.19.2
          name: zipkin
          readinessProbe:
            httpGet:
              path: /api/v1/services
              port: 9411
            initialDelaySeconds: 5
          resources:
            limits:
              cpu: "0"
              memory: "0"
            requests:
              cpu: "0"
              memory: "0"
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
      fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=zipkin-mysql&var-version=0.1.9
      fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
      fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin-mysql/
      fabric8.io/git-branch: release-v0.1.9
      fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
      fabric8.io/scm-tag: 0.1.9
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/mysql/target/zipkin-mysql-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin-mysql
      version: 0.1.9
      group: io.fabric8.zipkin
    name: zipkin-mysql
  spec:
    replicas: 1
    selector:
      provider: fabric8
      project: zipkin-mysql
      group: io.fabric8.zipkin
      version: 0.1.9
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: d08998bf477eff7154e8fa871c45e6183a3ced08
          fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=zipkin-mysql&var-version=0.1.9
          fabric8.io/scm-con-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
          fabric8.io/scm-url: http://github.com/fabric8io/kubeflix/zipkin-mysql/
          fabric8.io/git-branch: release-v0.1.9
          fabric8.io/scm-devcon-url: scm:git:git@github.com:fabric8io/kubeflix.git/zipkin-mysql
          fabric8.io/scm-tag: 0.1.9
        labels:
          provider: fabric8
          project: zipkin-mysql
          version: 0.1.9
          group: io.fabric8.zipkin
      spec:
        containers:
        - env:
          - name: MYSQL_USER
            value: zipkin
          - name: MYSQL_PASSWORD
            value: zipkin
          - name: MYSQL_ROOT_PASSWORD
            value: zipkin
          - name: MYSQL_DATABASE
            value: zipkin
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: gencatcloud/mysql-openshift:5.7
          name: zipkin-mysql
          readinessProbe:
            initialDelaySeconds: 5
            tcpSocket:
              port: 3306
          resources:
            limits:
              cpu: "0"
              memory: "0"
            requests:
              cpu: "0"
              memory: "0"
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: mysql-data
          - mountPath: /docker-entrypoint-initdb.d/
            name: mysql-init-script
          - mountPath: /etc/mysql/conf.d/
            name: mysql-confd
        volumes:
        - name: mysql-data
          emptyDir: {}
        - configMap:
            name: zipkin-mysql-initdb
          name: mysql-init-script
        - configMap:
            name: zipkin-mysql-cnf
          name: mysql-confd
    triggers:
    - type: ConfigChange
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/path: /prometheus
      prometheus.io/port: "9411"
      fabric8.io/app-menu: management
      maven.fabric8.io/source-url: jar:file:/home/jenkins/workspace/cd_kubernetes-zipkin_master-B7LMZZ7OFPMTGQZLAYSHZPUWCW3S2GY447R76X4T4TJEKKYQDEKA/zipkin/target/zipkin-0.1.9.jar!/META-INF/fabric8/openshift.yml
    labels:
      provider: fabric8
      project: zipkin
      version: 0.1.9
      group: io.fabric8.zipkin
      expose: "true"
    name: zipkin
  spec:
    port:
      targetPort: 9411
    to:
      kind: Service
      name: zipkin
